rettet skrivefeil prosess

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -230,7 +230,6 @@ før problemet ble oppdaget. I tillegg ser vi at gruppereglene til Scharwz
 (\cref{tab:grunnregler}) har noe for seg, og at å droppe kun én faktisk
 resulterer i lavere effektivitet. \\
 
-
 %Situasjon: ``In your face!'' fra Turid til Joakim om Crank og stabilitet
 Ved oppstart ble det tidlig diskutert hvilket diskretiseringsskjema som skulle
 brukes på differensiallignignene. Da diskusjonen peilet seg inn på
@@ -263,3 +262,6 @@ sjå eventuelt humor i situasjonen. Med ein uhøytidlig atmosfære på gruppen v
 og at eventuell kritikk ikke blir tatt for personleg. Vi observerer altså her at teorien 
 som tar for seg humor (\cite{jj-humor} og \cref{sec:kommunikasjonsteori}) stemmer 
 meget godt med humors innvirkning på gruppeprosesser i virkeligheten.
+
+%Kommenter Wheelan sitt sitat om at effektive grupper er saklige 80% av tida
+
