--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -8,7 +8,7 @@ det fysiske systemet som skal studeres.
 
 \subsection*{Innstilling til gruppearbeid}
 Jeg har hatt både positive og negative erfaringer med gruppearbeid tidligere.
-Jeg har merket seg at de gruppene jeg har negative erfaringer fra ofte har hatt
+Jeg har merket meg at de gruppene jeg har negative erfaringer fra ofte har hatt
 medlemmer som ikke har vært motiverte for arbeidsoppgaven. Dette har delvis
 motivert mitt valg av MiA som landsby, da jeg tror at de som velger MiA er
 innstilt på å gjøre en god jobb.
@@ -61,10 +61,22 @@ gruppa har blitt mye bedre kjent, og sannsynligvis også til å øke produktivit
 på lang sikt.
 
 \person{Turid}
-Studerer ved industriell matematikk ved linja numerisk matematikk ved NTNU, med hovedvekt på numerisk matematikk. Har tidligere gått på folkehøgskole ved linja søm og design og handball. Var med på UKA-06 som kostymedesigner for revyen.
+Studerer ved linja industriell matematikk på NTNU, med hovedvekt på numerisk matematikk. Har tidligere gått på folkehøgskole ved linja søm og design og handball. Var med på UKA-06 som kostymedesigner for revyen.
 
-\subsection*{Innstilling til Gruppearbeid}
-Jeg har tidligere jobbet en del i grupper gjennom studiet på NTNU. Disse gruppene har midlertidig vært prega av en homogenitet i forhold til fagbakgrunn. Det har gjort at vi angriper nye problemstillinger med en lik tankegang, og vi mister evnen til å komme opp med mer kreative ideer til løsningsmetoder. De differansene som jeg har opplevd i samband av gruppearbeid, har ofte grunna i ulike personligheter og kommunikasjonstil. Da vi ikke har hatt noe opplæring i å takle ulike differanser og konflikter som disse ofte fører til, har disse differansene ofte hatt en negativ innvirkning på gruppearbeidet i form av uløste konflikter og stagnering. Jeg har dermed sett fram til muligheten med å lære mer om sjølve gruppeprosessen og gruppedynamikk for å kunne takle slike situasjoner annerledes i framtida. Jeg trives vanligvis godt i grupper, og synes gruppearbeid kan være både fremende og utfordrende.  Jeg såg derfor fram til å jobbe i ei mer heterogen gruppe, med tanke på fagbakgrunn.
+\subsection*{Innstilling til gruppearbeid}
+Jeg har tidligere jobbet en del i grupper gjennom studiet på NTNU. Disse
+gruppene har imidlertid vært preget av en homogenitet i forhold til fagbakgrunn.
+Det har gjort at vi angriper nye problemstillinger med en lik tankegang, og vi
+mister evnen til å komme opp med mer kreative ideer til løsningsmetoder. De
+forskjellene mellom gruppemedlemmer jeg har opplevd har ofte
+grunnlag i ulike personligheter og kommunikasjonsstil. Da vi ikke har hatt noe
+opplæring i å takle disse ulikhetene og de medhørende konfliktene, har
+disse ulikhetene ofte hatt en negativ innvirkning på gruppearbeidet i form av
+uløste konflikter og stagnering. Jeg har dermed sett fram til muligheten til å
+lære mer om selve gruppeprosess og gruppedynamikk for å kunne takle slike
+situasjoner annerledes i fremtiden. Jeg trives vanligvis godt i grupper, og synes
+gruppearbeid kan være både fremmende og utfordrende. Jeg så derfor fram til å
+jobbe i en mer heterogen gruppe, med tanke på fagbakgrunn.
 
 
 %\subsection*{Turid om sin rolle i gruppa}
@@ -74,17 +86,20 @@ Jeg har tidligere jobbet en del i grupper gjennom studiet på NTNU. Disse gruppe
 \subsection*{Gruppa om Turid}
 Turid er ansvarsbevisst og har tatt mye initiativ for prosessdelen. Hun er en
 samlende faktor i gruppa, som kan hente oss inn når vi sporer av. Turid har vært
-involvert i mange av konfliktene på gruppa, muliggens fordi hun er jente,
+involvert i mange av konfliktene på gruppa, muligens fordi hun er jente,
 men også fordi hun gjerne vil få igjennom viljen sin. Turid kaller en spade for
 en spade, noe resten av gruppa setter pris på. Turid har vært aktiv i de aller
 fleste diskusjoner, og er flink til å delegere oppgaver og å passe på at alle
 har noe å gjøre.
 
 \person{Paul}
-Paul går i 4.klasse på studieretningen fysikk og matematikk, med spesialising i statistikk. Han har erfaring fra gruppearbeid fra prosjektoppgaver i statistikk, numerikk og matematisk modellering.
+Paul går i 4.klasse på studieretningen fysikk og matematikk, med spesialising i
+statistikk. Han har erfaring med gruppearbeid fra prosjektoppgaver i statistikk, numerikk og matematisk modellering.
 
 \subsection*{Innstilling til gruppearbeid}
-Jeg liker å ha oversikt over arbeidsoppgaver og at gruppa har en framdriftsplan. Jeg er nøye med det jeg gjør, og står på når jeg har fått en konkret arbeidsoppgave. Jeg er flink til å lytte til andres meninger, og kommer på ting som jeg kan bidra med i gruppa.
+Jeg liker å ha oversikt over arbeidsoppgaver og at gruppa har en framdriftsplan.
+Jeg er flink til å lytte til andres meninger, og kommer på ting som jeg kan bidra med i gruppa.
+Jeg er nøye med det jeg gjør, og står på når jeg har fått en konkret arbeidsoppgave.
 
 \subsection*{Gruppa om Paul}
 Paul er en stillferdig person i gruppesammenheng, men på tomannshånd er han mer
@@ -93,7 +108,7 @@ involveres mer aktivt enn noen av de andre medlemmene. Paul er flink til å ta
 initiativ på det faglige, og veldig fokusert på oppgaven. Han koordinerer bra 
 med de andre medlemmene i forhold til sitt fagfelt, og er et positivt bidrag til
 gruppa. Hvis man gir Paul en oppgave, er man sikker på at den blir godt
-gjennomført og på tiden.
+gjennomført innen tidsfristen.
 
 \person{Knut Halvor}
 Knut Halvor studerer 4. året ved NTNU på linjen datateknikk. Studieretningen han 
@@ -103,10 +118,10 @@ erfaringer med er at medlemmene er innstilte på å gjøre en god jobb, og at de
 har høye forventniger til hverandre.
 
 \subsection*{Innstilling til gruppearbeid}
-Jeg foretrekker og ha klare retningslinjer for hvilke oppgaver de forskjellige 
+Jeg foretrekker å ha klare retningslinjer for hvilke oppgaver de forskjellige 
 medlemmene har i gruppen. På denne måten kan oppgaver og løsningsmetoder diskuteres,
-uten at de blir "overdiskutert". Selv om jeg foretrekker å alene ha ansvaret for mine oppgaver,
-foretrekker jeg og jobbe sammen med andre, da diskusjoner rundt problemstillinger og
+uten at de blir "overdiskutert". Selv om jeg foretrekker å ha ansvaret alene for mine oppgaver,
+foretrekker jeg å jobbe sammen med andre, da diskusjoner rundt problemstillinger og
 løsningsmetoder hjelper meg til å få organisert tankene mine.
 
 \subsection*{Gruppa om Knut Halvor}
