--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -13,6 +13,13 @@
 	publisher="Pearson",
 	year="2006"
 }
+@inbook{jj-bales,
+	author="David W. Johnson \& Roger T. Johnson",
+	title="Joining together. Group theory and group skills",
+	chapter="5: Leadership",
+	publisher="Pearson",
+	year="2006"
+}
 
 @inbook{wheelan,
 	author="Susan A. Wheelan",
