--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -3,8 +3,7 @@
 \label{sec:schwarz}
 \subsection{Effektivitet}
 
-
-Flere faktorer påvirker en gruppes effektivitet; har gruppen et klart mål? Er
+Flere faktorer påvirker en gruppes effektivitet; har gruppa et klart mål? Er
 medlemmene enige om arbeidsmetode, og er de motiverte for den? For å forenkle
 jobben som fasilitator, og/eller gi gruppemedlemmene mulighet til å påvirke
 effektiviteten selv, har Schwarz utviklet en ``modell'' for hva som gjør grupper
@@ -14,7 +13,7 @@ introduksjonen til kapittelet: ``All models are wrong; some are useful''.
 Schwarz setter opp tre kriterier for effektivt gruppearbeid:
 
 \begin{itemize}
-\item[\textsc{Ytelse}] Tjenesten eller produktet gruppen leverer møter (eller overgår)
+\item[\textsc{Ytelse}] Tjenesten eller produktet gruppa leverer møter (eller overgår)
 	forventningene og/eller kravene til de som skal bruke/motta/evaluere
 	tjenesten.
 \item[\textsc{Prosess}] Prosessene bak utførelsen av arbeidet vedlikeholder, eller
@@ -25,11 +24,11 @@ selvfølelse blant medlemmene.
 \end{itemize}
 
 Disse kriteriene er avhengige av hverandre, og for at en gruppe skal være
-effektiv må den møte alle tre kritierer. Bryter gruppen på ett punkt vil det
+effektiv må den møte alle tre kritierer. Bryter gruppa på ett punkt vil det
 påvirke de andre. For eksempel: Hvis en gruppe håndterer konflikter på en slik
 måte at tilliten mellom medlemmene avtar, vil det på sikt føre til at medlemmene
-vil holde informasjon tilbake fra resten av gruppen. Dette vil igjen føre til at
-nøkkelinformasjon ikke er tilgjengelig for samtlige gruppemedlemmer, og gruppen
+vil holde informasjon tilbake fra resten av gruppa. Dette vil igjen føre til at
+nøkkelinformasjon ikke er tilgjengelig for samtlige gruppemedlemmer, og gruppa
 vil bli ineffektiv.
 
 Videre beskrives måter en gruppe kan sikre seg effektivitet. En effektiv gruppe
@@ -47,26 +46,25 @@ løsningsmetode, i tillegg til at mottaker blir tvunget til å komme med motargu
 Effektive grupper tester også ut sine antagelser. Det vil si at
 dersom et gruppemedlem sier noe, svarer mottaker med å fortelle hva han/hun tror
 den andre mente. Man minimerer da muligheten for misforståelser og videre
-frustrasjon. $\\$
-
-Effektive grupper må også ha klare definerte rammer for oppgaven som skal løses. 
-Det er også viktig at hvert gruppemedlem kjenner (og klarer å uttrykke) denne
+frustrasjon. Effektive grupper må også ha klare definerte rammer for oppgaven som skal løses. 
+Det er viktig at hvert gruppemedlem kjenner (og klarer å uttrykke) denne
 oppgaven. Gruppen må også sørge for at hvert medlem har en klar oppfatning av
 sin egen rolle i oppnåelsen av gruppeoppgaven. I samme omgang bør det sørges for
-at beslutningsprosesser og hierarki i gruppen er klart definert og forstått. $\\$
+at beslutningsprosesser og hierarki i gruppa er klart definert og forstått. $\\$
 
-En enkel, men god måte å oppnå alle disse punktene på, er å bruke endel tid i
+En enkel, men god måte å oppnå alle disse punktene på, er å bruke tid i
 starten på å få til en bra samarbeidskontrakt. Tema som lederskap,
-problemstilling, beslutningsmønstre, oppgavefordeling osv. bør innlemmes i kontrakten. Se
-\cref{sec:kontrakt}. Schwarz har kokt alt dette ned til 9 grunnregler som skal sørge for
+problemstilling, beslutningsmønstre, oppgavefordeling osv. bør innlemmes i kontrakten. 
+Schwarz har kokt alt dette ned til 9 grunnregler som skal sørge for
 gruppeeffektivitet. (Se \cref{sec:grunnregler}.)
 
 \subsection{Grunnregler}
 \label{sec:grunnregler}
 For å sikre effektivt gruppearbeid har Schwarz \cite{schwarz} etablert et sett
 med grunnleggende regler (\cref{tab:grunnregler}), dette sørger for at gruppa har et enkelt og
-oversiktlig oppslagsverk og vise til, for eksempel ved diskusjoner. I tillegg er
+oversiktlig oppslagsverk og vise til, f. eks. ved diskusjoner. I tillegg er
 det en god pekepinn på punkter som bør være i samarbeidskontrakten.
+\clearpage
 \begin{center}
 \begin{table}[ht!]
 \begin{tabular}{r l}
@@ -90,7 +88,8 @@ det en god pekepinn på punkter som bør være i samarbeidskontrakten.
 \subsection{Gruppedynamikk}
 Gruppedynamikk handler om den vitenskapelige studien av oppførsel i grupper.
 Forståelsen av adferd i grupper er essensiell, da mennesker i all hovedsak er
-gruppeorientert; det være seg i familien, blant venner eller på jobb. Det første som må læres er; ``hva er en gruppe?''. Spørsmålet er vanskeligere enn
+gruppeorientert; det være seg i familien, blant venner eller på jobb. Det første
+som må læres er - hva er en gruppe?. Spørsmålet er vanskeligere enn
 man skulle tro, og Johnson \& Johnson (J\&J) \cite{jj} viser til at sosiologene
 fortsatt ikke er enige om én definisjon. Likevel kan man si at en gruppe er en
 samling av minimun to personer, som relaterer med hverandre ansikt til ansikt.
@@ -107,8 +106,8 @@ basiselementer:
 \item[$4.$] Fungerende sosiale antenner.
 \item[$5.$] Gode gruppeprosesser.
 \end{itemize}
-Hvis man i tillegg skal sørge for at gruppen er effektiv må gruppemedlemmene
-\textbf{(1)} Sørge for at gruppens felles mål anvender hvert medlems
+Hvis man i tillegg skal sørge for at gruppa er effektiv må gruppemedlemmene
+\textbf{(1)} Sørge for at gruppas felles mål anvender hvert medlems
 individuelle kompetanse, \textbf{(2)} forsikre at kommunikasjon mellom hverandre
 er nøyaktig og forstås korrekt, \textbf{(3)} etablere lederskap og/eller
 passende innflytelse, \textbf{(4)} implementere beslutningsmønstre som sørger
@@ -117,8 +116,8 @@ resonnement og konklusjon er åpne for evaluering og analysering, \textbf{(5)}
 etabler metoder for å håndtere konflikter konstruktivt.$\\$
 
 \subsection{Å verdsette ulikheter}
-Det er uunngåelig at en gruppe vil bestå av personer med ulike egenskaper. Det
-være seg faglige, personlige, kulturelle, religiøse, etniske og så videre.
+Det er uunngåelig at en gruppe vil bestå av personer med ulike egenskaper, det
+være seg faglige, personlige, kulturelle, religiøse, etniske osv.
 Det er viktig å sørge for at ulikhetene blant gruppemedlemmene kulminerer i noe
 positivt, Johnson \& Johnson presenterer ulike måter man kan forsikre dette på.
 Man må forsikre at det mellom gruppemedlemmene er en stor grad av positiv
@@ -139,30 +138,37 @@ i gruppa blir friere og bedre.
 \section{Wheelan}
 \subsection{Effektive gruppemedlemmer}
 
-Wheeland beskriver gruppemedlemmer's oppførsel og holdninger i effektive grupper. En viktig del av å være et effektivt gruppemedlem består i å vurdere sin egen oppførsel, holdning og kommunikasjonstil. Teorien er presentert i form av retningslinjer. 
+Wheelan beskriver gruppemedlemmers oppførsel og holdninger i effektive grupper.
+En viktig del av å være et effektivt gruppemedlem består i å vurdere sin egen
+oppførsel, holdning og kommunikasjonsstil. Teorien er presentert i form av retningslinjer. 
 
 \begin{center}
 \begin{table}[ht!]
 \begin{tabular}{r l}
 1. & Ikke skyld på andre for gruppas problemer \\
-2. & Vær engasjert når gruppa setter mål, roller og avklaring av oppgaver \\
-3. & Vær for en åpen kommunikasjonsstruktur der alle medlemmer deltar og blir
+2. & Vær engasjert når gruppa setter mål, roller og avklarer oppgaver \\
+3. & Innfør en åpen kommunikasjonsstruktur der alle medlemmer deltar og blir
 hørt \\
 4. & Ha en riktig fordeling mellom diskusjon av oppgaven og støttende
 kommunikasjon \\
-5. & Bruk en effektiv måte å løse oppgaver på, og en effektiv måte å ta
+5. & Etabler en effektiv måte å løse oppgaver og ta
 avgjørelser \\
-6. & Lage normer som støtter produktivitet, innovasjon og frihet til å uttale
+6. & Lag normer som støtter produktivitet, innovasjon og frihet til å uttale
 seg \\
-7. & Bidra med normer som forfremmer produktivitet \\
-8. & Forfremme gruppearbeid
+7. & Bidra med normer som fremmer produktivitet \\
+8. & Forfrem gruppearbeid
 \end{tabular}
 \caption{Wheelans retningslinjer for effektivt gruppearbeid}
 \label{tab:Wheelan}
 \end{table}
 \end{center}
 
-Punkt 1 kaller Wheeland for ``the fundamental attribution error'', fordi vi ofte tilskriver andres holdninger til personlige trekk uten å ta andre faktorer i betraktning. For eksempel kan vi skylde på sjefen for dårlige resultater uten å ta i betraktning budsjettrestriksjoner, og dårlig gruppesammarbeid. En gruppe blir ikke effektiv før alle tar ansvar for gruppa's samarbeid og produktivitet. \\
+Punkt 1 kaller Wheelan for ``the fundamental attribution error'', fordi vi ofte
+tilskriver andres holdninger til personlige trekk uten å ta andre faktorer i
+betraktning. For eksempel kan vi skylde på sjefen for dårlige resultater uten å
+ta i betraktning budsjettrestriksjoner og dårlig gruppesammarbeid. En gruppe
+blir ikke effektiv før alle tar ansvar for gruppas samarbeid og produktivitet.
+\\
 
 Punkt 2 dreier seg om å være klar over hva som foregår i gruppearbeidet. Hvis man ikke forstår hva som foregår, må man våge å spørre. Å stille spørsmål til hele gruppa vil føre til en rikere diskusjon og vil klargjøre ting for alle gruppemedlemmer. \\
 
@@ -176,11 +182,23 @@ bordet'', hvor alle \emph{må} komme med sitt syn på saken. \\
 
 %Punkt 3 tar opp problemet med at medlemmer i gruppa ikke tør å si det de mener fordi de ofte klassifiserer andre i gruppa, og ut i fra det angir dem høyere eller lavere status. Disse medlemmene kan bli ignorert i gruppa, noe som fører til at gruppa blir mindre produktiv. En måte å sikre at alle blir hørt på er så enkelt som å ta en runde rundt bordet for å høre hva hver og en har å si. \\
 
-Punkt 4 handler om oppgaveorientert diskusjon i gruppen. Forskning tyder på at suksessfulle grupper bruker om lag 70-80 \% av tiden sin til å diskutere oppgave og mål. Men ofte hender det at gruppa går seg bort i en lang diskusjon om noe annet. \\
+Punkt 4 handler om oppgaveorientert diskusjon i gruppa. Forskning tyder på at
+suksessfulle grupper bruker om lag 70-80 \% av tiden sin til å diskutere oppgave
+og mål. Det hender likevel at gruppa ofte går seg bort i en lang diskusjon om noe
+annet. \\
 
-Punkt 5 diskuterer effektive måter for oppgaveløsning og det å ta beslutninger. Det nevnes fire steg som kan følges: Å innse problemet, diagnotisere problemet, ta beslutningen, og akseptere og gjennomføre beslutningen. I praksis består de to første stegene i å planlegge strategier for å løse problemet. Når man så skal ta en beslutning er det ikke noe klart svar på hvilken beslutningsmåte som er best, men gruppa skal velge en beslutningsmåte der alle medlemmer kan akseptere beslutningen.  \\
+Punkt 5 diskuterer effektive måter for oppgaveløsning og det å ta beslutninger.
+Det nevnes fire steg som kan følges: Å innse problemet, diagnostisere problemet,
+ta beslutningen og akseptere og gjennomføre beslutningen. I praksis består de
+to første stegene i å planlegge strategier for å løse problemet. Når man så skal
+ta en beslutning er det ikke noe klart svar på hvilken beslutningsmåte som er
+best, men gruppa skal velge en beslutningsmåte der alle medlemmer kan akseptere
+avgjørelsen.  \\
 
-Punkt 6 handler om gruppas avtale. Hvis gruppas medlemmer ikke er helt enige om forutsetninger rundt gruppearbeidet, blir resultatet også middelmådig. Hvis medlemmene derimot er enige om å gjøre en best mulig jobb og løse problemer på best mulig måte, er det større sannsynlighet for at resultatet blir bra. Frihet til å uttale seg er nevnt i punkt 3. \\
+Punkt 6 handler om gruppas avtale. Hvis gruppas medlemmer ikke er helt enige om
+forutsetninger rundt gruppearbeidet, blir resultatet middelmådig. Dersom
+medlemmene er enige om å gjøre en best mulig jobb og løse problemer på
+best mulig måte, er det større sannsynlighet for at resultatet blir bra. \\
 
 Punkt 7 dreier seg om normer, dvs. regler om medlemmenes oppførsel og hva som skal gjøres. Normer er nødvendige for å samordne gruppas arbeid mot et felles mål. Spesielt er normer viktige når medlemmene er uenige i hvordan ting skal gjøres. \\
 
@@ -192,24 +210,72 @@ Punkt 8 diskuterer egenskaper ved godt gruppesamarbeid. Disse er bl.a. god kommu
 %look at patterns of group communication and the variables that influence communication effectiveness
 %
 
-For at en gruppe skal kunne fungere effektivt, er det viktig at medlemmer klarer å kommunisere enkelt og effektivt. Særlig i en tverrfaglig gruppe er det viktig at medlemmer er effektive i å formidle videre den informasjonen de innehar. (Da løsningen av problemet i stor grad avhenger av evnen gruppen har til å flette sammen informasjon som flere medlemmer innehar, er det viktig at mottakeren av informasjonen sitter igjen med det samme bilde som sender prøver å formidle). Det er derfor viktig å ha en grunnleggende forståelse for gruppekommunikasjon.\\
+For at en gruppe skal kunne fungere effektivt, er det viktig at medlemmer klarer
+å kommunisere enkelt og effektivt. Særlig i en tverrfaglig gruppe er det viktig
+at medlemmer er effektive i å videreformidle den informasjonen de innehar. (Da
+løsningen av problemet i stor grad avhenger av evnen gruppa har til å flette
+sammen informasjon som flere medlemmer innehar, er det viktig at mottakeren av
+informasjonen sitter igjen med det samme bilde som sender prøver å formidle).
+Det er derfor viktig å ha en grunnleggende forståelse for
+gruppekommunikasjon.\\
 
-For å forstå gruppekommunikasjonen i et team, er det to ting som er viktige å se nærmere på; kommunikasjonsmønsteret/ kommunikasjonsnettverk og kommunikasjonseffektiviteten. Ved kommunikasjonsmønsteret mener vi her hvem som kommuniserer med hvem. Vi kan her snakke om en envegskommunikasjon, der lederen adresserer gruppen, eller en tovegskommunikasjon, som f.eks. myldring blant gruppemedlemmer. Kommunikasjonseffektiven er her definert som evnen til å formidle en beskjed på en slik måte at mottakeren tolker beskjeden slik som sender selv har tenkt.
-Variable som kan virke inn på gruppekommunikasjonen er normer på gruppen, konkurranse innad i gruppen, arbeidsmiljøet, sittearrangementer og humor innad i gruppen.\\
+For å forstå gruppekommunikasjonen i et team, er det to ting som er viktige å se
+nærmere på; kommunikasjonsmønstre og kommunikasjonseffektivitet. Med
+kommunikasjonsmønstre mener vi hvem som
+kommuniserer med hvem. Her kan vi snakke om en enveiskommunikasjon, der lederen
+adresserer gruppa, eller en toveiskommunikasjon, som f.eks. myldring blant
+gruppemedlemmer. Kommunikasjonseffektivitet er definert som evnen til å
+formidle en beskjed på en slik måte at mottakeren tolker beskjeden slik som
+sender selv har tenkt.
+Variabler som kan påvirke gruppekommunikasjonen er normer,
+konkurranse og humor innad i gruppa, arbeidsmiljøet og sittearrangementer.\\
 
 
 \section{Roller i gruppearbeid}\label{avs:roller}
-«I grupparbete spelar rollerna roll» (Stefan Jern, (1))\\
+\begin{quote}
+  ``I grupparbete spelar rollerna roll'' - (Stefan Jern, sitert i \cite{svenskeboka})
+\end{quote}
 
-En rolle kan defineres som en spesiell type særegenhet, som definerer din plass på gruppen. En gruppe består av individ med ulike personligheter og særegenskaper.  Disse personlige trekkene er en faktor som er med på å definere hvilken rolle et medlem vil spille på gruppen. Når en gruppe går sammen, bygges det forventninger til rollen de andre vil ha på gruppen utifra inntrykket de får av individet. Dine egne forventninger og gruppas forventninger til din rolle er i stor grad med på å forme den rollen du vil ha i gruppen videre. I et gruppesamarbeid med flat struktur snakker vi her om uformelle roller. Uformelle roller er roller som vokser fram gjennom samspill i gruppen. Uformelle roller i et gruppesamarbeid kan i hovedsak deles i to roller; instrumentelle roller og sosial-emosjonelle roller. \\
+En rolle kan defineres som en særegenhet som definerer din plass
+på gruppa. En gruppe består av individer med ulike personligheter og
+særegenskaper.  Disse personlige trekkene er en faktor som er med på å definere
+hvilken rolle et medlem vil spille på gruppa. Når en gruppe går sammen, bygges
+det forventninger til rollen de andre vil ha på gruppa utifra inntrykket de får
+av personen. Dine egne forventninger og gruppas forventninger til din rolle er
+i stor grad med på å forme den rollen du vil ha i gruppa videre. I et
+gruppesamarbeid med flat struktur snakker vi her om uformelle roller. Uformelle
+roller er roller som vokser fram gjennom samspill i gruppa.I et gruppesamarbeid
+kan slike i hovedsak deles i to roller; instrumentelle roller og
+sosial-emosjonelle roller. \\
 
-I Robert-Bales likevektsteori statuerer han viktigheten ved en balanse mellom arbeidsoppgaver og sosial-emosjonelle aktiviteter i effektive grupper. I effektive grupper ser en derfor ofte at et medlem trer inn i rollen som instrumentell leder, mens en annen trer inn i rollen som sosial-emosjonell leder. Kjennetegnet på en instrumentell-leder er at det er ofte han som setter igang aksjoner for å sikre at målet til gruppen blir nådd (oppgaverettet aksjoner), mens den sosial-emosjonelle lederen setter igang aksjoner for å opprettholde og forbedre interrelasjonene i gruppen (relasjonsrettede aksjoner).\\
+I Robert-Bales' likevektsteori \cite{jj-bales} statuerer han viktigheten av en balanse mellom
+arbeidsoppgaver og sosial-emosjonelle aktiviteter i effektive grupper. I
+effektive grupper ser en derfor ofte at et medlem trer inn i rollen som
+instrumentell leder, mens en annen trer inn i rollen som sosial-emosjonell
+leder. Kjennetegnet på en instrumentell leder er at han ofte setter
+igang aksjoner for å sikre at målet til gruppa blir nådd (oppgaverettet
+aksjoner), mens den sosial-emosjonelle lederen setter igang aksjoner for å
+opprettholde og forbedre interrelasjonene i gruppa (relasjonsrettede
+aksjoner).\\
 
-%I en flatstrukturert gruppe er lederrollen ofte avhengig av situasjoner gruppen møter. 
+%I en flatstrukturert gruppe er lederrollen ofte avhengig av situasjoner gruppa møter. 
 %Situasjonsbetinget lederskap er definert som delt lederskap blant gruppemedlemmer der %medlemmene varierer oppførselen etter hva funksjon gruppa treng til ein kvar tid. Ein funksjon er %ein aksjon som blir sett igang for å sikre effektiviteten i gruppa, og kan vera enten oppgåveretta %aksjoner og relasjonsretta/samholdsretta aksjoner. 
 
-Benne og Sheat beskrev i 1948, tretten instrumentelle roller. Her tar jeg for meg noen av de som var mest framtredene i vår gruppe; initiativtakeren, informasjonssøkeren, informasjonsgiveren, meningsøkeren, meningsgiveren, diagnostikeren, koordinatoren, opplyseren, energigiveren og kritikeren.
-%Disse er alle viktige roller på gruppen.
-Meningsøkeren spiller en viktig del på gruppen ved at han innbyr til diskusjon rundt fremlagte fakta. Slik får medlemmene uttrykt sin mening og en beslutning kan tas om hva som er anvendbart i praksis. Diagnostikeren er den analyserende parten på gruppen, som tar opp problemer/utfordringer ved oppgave, og eventuelt leder gruppen i en ny retning. Koordinatoren derimot bidrar ved å samkjøre gruppas arbeid og flette de sammen til en helhet.\\
+Benne og Sheat beskrev i 1948 tretten instrumentelle roller \cite{svenskeboka}. Her tar vi for
+oss noen av de som var mest framtredene i vår gruppe; initiativtakeren,
+informasjonssøkeren, informasjonsgiveren, meningsøkeren, meningsgiveren,
+diagnostikeren, koordinatoren, opplyseren, energigiveren og kritikeren.
+%Disse er alle viktige roller på gruppa.
+Meningsøkeren spiller en viktig del på gruppa ved at han innbyr til diskusjon
+rundt fremlagte fakta. Slik får medlemmene uttrykt sin mening og en beslutning
+kan tas om hva som er anvendbart i praksis. Diagnostikeren er den analyserende
+parten på gruppa, som tar opp problemer/utfordringer ved oppgave, og eventuelt
+leder gruppa i en ny retning. Koordinatoren derimot bidrar ved å samkjøre
+gruppas arbeid og flette de sammen til en helhet.\\
 
-Benne og Sheat satt og opp åtte sosial-emosjonelle roller i ei gruppe; oppmuntreren, harmonisereren, spenningoppløseren, kompromisten, målvakten, følelsetolken, normsetteren og følgeren. En målvakt virker som en slags ordstyrer, som øker kommunikasjonen ved å bremse pratmakerne og passer på at alle kommer til ordet. Disse rollene kan fluktuere mellom medlemmene på gruppen, men ofte ser en at et individ påtar seg noen roller med høgere frekvens.\\
+Benne og Sheat satte også opp åtte sosial-emosjonelle roller i en gruppe;
+oppmuntreren, harmonisereren, spenningoppløseren, kompromisten, målvakten,
+følelsestolken, normsetteren og følgeren. En målvakt virker som en slags
+ordstyrer, som øker kommunikasjonen ved å bremse pratmakerne og passer på at
+alle kommer til ordet. Disse rollene kan fluktuere mellom medlemmene på gruppa,
+men ofte ser en at enkeltpersoner påtar seg noen roller med større frekvens.\\
