--- a/rapport/experiments.tex
+++ b/rapport/experiments.tex
@@ -15,15 +15,15 @@
 
 The bacon slice was laid between one sheet of paper on top, and one sheet of
 grease-proof paper beneath. Earlier experiments with dual layer paper had
-resulted in fusing of the bacon and paper. Still we needed to absorb the fat
-output, so a compromise was to combine paper (for fat absorption) and
-grease-proof paper (preventing fat spillage). $\\$
+resulted in fusing of bacon and paper. Still the melted fat had to be absorbed, 
+so a compromise was to combine paper (for fat absorption) and
+grease-proof paper (preventing fat spillage). \\
 
 First the weight of the wrapping was measured (paper and grease-proof paper), and
 then the dimensions of the bacon - weight, length, thickness and
 width - were measured. The bacon slice was wrapped and baked in the microwave oven for the
 desired amount of time. After completion new dimensions, both of
-bacon and wrapping were measured, and number between 0.0-1.0 describing the
+bacon and wrapping were measured, and a number between 0.0-1.0 describing the
 crispness of the bacon was assigned.
 
 \section{Measurements}
