--- a/rapport/introduction.tex
+++ b/rapport/introduction.tex
@@ -5,7 +5,7 @@
 \section{Problem formulation}
 The problem considered in this project is the preparation of bacon in a microwave oven. Bacon is
 defined as cured meat from side and back cuts of a pig. A microwave oven in this context is a
-household appliance typically delivering 750 W of microwave effect at a frequency of 2.1 GHz
+household appliance typically delivering 750 W of microwave effect at a frequency of 2.4 GHz
 to a Faraday cage of volume 40 liters.\\ 
 
 Previous work done in the field of pork preparation
@@ -52,7 +52,7 @@ what makes good bacon. So what does? \\
 
 Work done by \cite{maillard} and \cite{intarwebz} suggests that two factors are important in
 determining good bacon. The first is a high enough temperature that the Maillard
-reaction can take place, which happens around 140 \textdegree C. The second is that
+reaction can take place, which happens around 154 \textdegree C. The second is that
 a significant proportion of the fat has melted and has been transported out of
 the bacon. Both of these factors are naturally affected by the composition of
 the bacon; especially water and fat content will play a major role. \\
@@ -64,14 +64,14 @@ subjective question - different people prefer different grades of crispness.\\
 
 Another experimental question is how much of the microwave effect that is
 absorbed by the bacon. The second law of thermodynamics dictates that some of
-the effect is lost in the microwave magnetron, the question is how much effect
+the effect is lost in the microwave magnetron; the question is how much effect
 is dissipated in the bacon. This may also include losses besides that of the
 magnetron, which has a typical efficiency of 65\% \cite{namba}. It turns out
 that common household microwave ovens are rated to include this loss,
-with standardized calibration procedures published by the IEC's SC 59K, so a 750 W
-microwave oven will actually output 750 W of cooking energy into the cooking
+with standardized calibration procedures published by the IEC's SC 59K. This
+means a 750 W microwave oven will actually output 750 W of cooking energy into the cooking
 chamber, while typically drawing 1.1 kW of electrical power from the mains
-socket. This means using the rated power will be good enough for our purposes.
+socket. Thus using the rated power will be good enough for our purposes.
 \\
 
 Finally, experiments are needed to verify the accuracy of the numerical results.
