--- a/rapport/conclusion.tex
+++ b/rapport/conclusion.tex
@@ -1,8 +1,8 @@
 \chapter{Conclusion}
 \section{Discussion of the results}
 Observing the animation produced by the code in \cref{avs:implementation}, and
-viewing individual time slices, it is inferred that the optimal cooking time of
-a bacon slice 15 cm x 5 cm is about 50 seconds for crisp bacon. This is in good
+viewing stills at individual times, it is inferred that the optimal cooking time of
+a bacon slice $15\times5\times1$ cm is about 50 seconds for crisp bacon. This is in good
 agreement with the experiments, which found that after 50 seconds no more fat
 can be lost, indicating crisp bacon. In order to produce a correspondance
 between a numerical prediction of cooking time and experimental cooking time,
@@ -13,7 +13,7 @@ too small to give accurate statistics. \\
 
 The numerical work performed was satisfactory in terms of modelling the heat
 equations, including a realistic microwave source term and phase transitions.
-Integrating transport of liquid fat into this model, enabling an estimate of
+Integrating transport of liquid fat into this model enables an estimate of
 mass lost as a function of cooking time, in turn giving a second stop condition.
 This would give a consistency check on the temperature stop criterion. With
 regards to code integration, once the transport equations are implemented, it is
